<resources>
    <string name="app_name" translatable="false">Most Popular</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="user_information" translatable="false">User Info</string>
    <string name="title_notifications">Notifications</string>
    <string name="day">day</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="nationalid">NationalID</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="details">Details</string>
    <string name="logout">Logout</string>
    <string name="search">search</string>
</resources>